test/language/spec/syntax/invalid/col_precision_unterminated_string.topo
// TEST: column precision for unterminated string
// EXPECT-ERROR: unterminated string
// EXPECT-LINE: 5
// EXPECT-COL: 25
using Cfg = std::import("config.h);
